crud operation done

--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,39 @@
     --angle: 360deg;
   }
 }
+
+
+@layer base {
+  html, body {
+      overflow-y: scroll; /* Allows vertical scrolling */
+  }
+
+  /* Hide scrollbar for all elements on the site */
+  *::-webkit-scrollbar {
+      display: none;
+  }
+  * {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;     /* Firefox */
+  }
+}
+
+.contactBG{
+  background-image: url('./assets/images/tec-banner.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 400px    ;
+ 
+}
+
+ 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
